레이아웃 세팅
기본 레이아웃 세팅

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
      <!--[if lt IE 9]>
        <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
      <![endif]-->
-    <!-- 라이브러리가져오기 세팅-->
+    <!-- 라이브러리가져오기 -->
      <script src="js/jquery.min.js"></script>
      <script src="js/common.js"></script>
  </head>
 
  <body>
-
+    <header id="header"></header>
+    <section id="intro"></section>
+    <main>
+      <!-- menu section 노출영역 -->
+    </main>
+    <footer id="footer"></footer>
  </body>
 
  </html>
