--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
  </head>
 
  <body>
-    <header id="header"></header>
+    <header id="header">
+      <h1 id="top_logo"><a href="#">logo</a></h1>
+      <nav id="gnb">
+        <ul>
+          <li><a href="#intro">Home</a></li>
+          <li><a href="#myprofile">MyPortfolio</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#myskill">MySkill</a></li>
+          <li><a href="#ourclients">OurClients</a></li>
+          <li><a href="#mytool">MyTool</a></li>
+          <li><a href="#project">Project</a></li>
+        </ul>
+      </nav>
+    </header>
     <section id="intro"></section>
     <main>
       <!-- menu section 노출영역 -->
