--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <section id="intro"></section>
     <main>
       <!-- menu section 노출영역 -->
+      <section>MyPortfolio</section>
+      <section>Portfolio</section>
+      <section>MySkill</section>
+      <section>OurClients</section>
+      <section>MyTool</section>
+      <section>Project</section>
     </main>
     <footer id="footer"></footer>
  </body>
