--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         </ul>
       </nav>
     </header>
-    <section id="intro"></section>
+    <section id="intro">
+      <article>
+        <h2>About my company</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a href="#myprofile" class="button">grt start</a>
+      </article>
+    </section>
     <main>
       <!-- menu section 노출영역 -->
       <section>MyPortfolio</section>
