--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8">
      <title>portfolio page</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minmum-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0"/>
      <!--css initailize 초기화 -->
      <link rel="stylesheet" href="css/initial.min.css"/>
      <!-- layout css -->
@@ -36,17 +36,17 @@
       <article>
         <h2>About my company</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="#myprofile" class="button">grt start</a>
+        <a href="#myprofile" class="button">get start</a>
       </article>
     </section>
     <main>
       <!-- menu section 노출영역 -->
-      <section>MyPortfolio</section>
-      <section>Portfolio</section>
-      <section>MySkill</section>
-      <section>OurClients</section>
-      <section>MyTool</section>
-      <section>Project</section>
+      <section id="myprofile">MyPortfolio</section>
+      <section id="Portfolio">Portfolio</section>
+      <section id="MySkill">MySkill</section>
+      <section id="ourclients">OurClients</section>
+      <section id="mytool">MyTool</section>
+      <section id="project">Project</section>
     </main>
     <footer id="footer"></footer>
  </body>
