--- a/index.html
+++ b/index.html
@@ -1,54 +1,138 @@
- <!DOCTYPE html>
- <html lang="en">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-     <meta charset="UTF-8">
-     <title>portfolio page</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0"/>
-     <!--css initailize 초기화 -->
-     <link rel="stylesheet" href="css/initial.min.css"/>
-     <!-- layout css -->
-     <link rel="stylesheet" href="css/style.css"/>
-     <!--[if lt IE 9]>
-       <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-     <![endif]-->
-    <!-- 라이브러리가져오기 -->
-     <script src="js/jquery.min.js"></script>
-     <script src="js/common.js"></script>
+    <meta charset="UTF-8">
+    <title>portfolio page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0"/>
+    <!--css initailize 초기화 -->
+    <link rel="stylesheet" href="css/initial.min.css"/>
+    <!--layout css-->
+    <link rel="stylesheet" href="css/style.css"/>
+    <!--[if lt IE 9]>
+     <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--jqeury 라이브러리 가져오기-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/common.js"></script>
  </head>
-
  <body>
-    <header id="header">
-      <h1 id="top_logo"><a href="#">logo</a></h1>
-      <nav id="gnb">
-        <ul>
-          <li><a href="#intro">Home</a></li>
-          <li><a href="#myprofile">MyPortfolio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#myskill">MySkill</a></li>
-          <li><a href="#ourclients">OurClients</a></li>
-          <li><a href="#mytool">MyTool</a></li>
-          <li><a href="#project">Project</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section id="intro">
-      <article>
-        <h2>About my company</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="#myprofile" class="button">get start</a>
-      </article>
-    </section>
-    <main>
-      <!-- menu section 노출영역 -->
-      <section id="myprofile">MyPortfolio</section>
-      <section id="Portfolio">Portfolio</section>
-      <section id="MySkill">MySkill</section>
-      <section id="ourclients">OurClients</section>
-      <section id="mytool">MyTool</section>
-      <section id="project">Project</section>
-    </main>
-    <footer id="footer"></footer>
+   <div class="back_to_top">
+     <a href="#intro">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="24px" height="24px"><path d="M0 0h24v24H0z" fill="none"/><path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/></svg>
+     </a>
+   </div>
+   <header id="header">
+     <h1 id="top_logo"><a href="#">logo</a></h1>
+     <nav id="gnb">
+       <ul>
+         <li><a href="#intro">Home</a></li>
+         <li><a href="#myprofile">MyProfile</a></li>
+         <li><a href="#portfolio">Portfolio</a></li>
+         <li><a href="#myskill">MySkill</a></li>
+         <li><a href="#ourclients">OurClients</a></li>
+         <li><a href="#mytool">MyTool</a></li>
+         <li><a href="#project">Project</a></li>
+       </ul>
+     </nav>
+   </header>
+   <section id="intro">
+     <article>
+       <h2>About My company</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis sapiente ullam, unde facilis, omnis quam assumenda vero dolorum reprehenderit amet sequi eaque recusandae ipsam non aut. Vero voluptatibus ipsam commodi!</p>
+       <a href="#myprofile" class="button">get started</a>
+     </article>
+   </section>
+   <main>
+     <!--menu section 노출영역-->
+     <section id="myprofile">
+       <div class="row">
+         <h2>My Profile</h2>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/profile/img01.jpg" alt="my profile img01" class="shadow">
+             <h3>Cherry Park</h3>
+             <div class="job">web publisher / font end development</div>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           </div>
+         </div>
+       </div>
+     </section>
+     <section id="portfolio">
+       <div class="row">
+         <h2>Portfolio</h2>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img01.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img02.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img03.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img04.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img05.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img06.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img07.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <a href="#"><img src="img/portfolio/img04.jpg" alt="portfolio"></a>
+             <h2>Portfolio no.1</h2>
+             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
+             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+           </div>
+         </div>         
+       </div>
+     </section>
+     <section id="myskill">MySkill</section>
+     <section id="ourclients">OurClients</section>
+     <section id="mytool">MyTool</section>
+     <section id="project">Project</section>
+   </main>
+   <footer id="footer">
+     footer
+   </footer>
  </body>
-
  </html>
