--- a/index.html
+++ b/index.html
@@ -62,77 +62,291 @@
          <h2>Portfolio</h2>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img01.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img01.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.1</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img02.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img02.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.2</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img03.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img03.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.3</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img04.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img04.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.4</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img05.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img05.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.5</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img06.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img06.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.6</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img07.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img07.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.7</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <a href="#"><img src="img/portfolio/img04.jpg" alt="portfolio"></a>
-             <h2>Portfolio no.1</h2>
-             <p><strong>Particulation&nbsp;:</strong>&nbsp;50%</p><br>
-             <p><strong>Description&nbsp;:</strong>&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+            <a href="#"><img src="img/portfolio/img08.jpg" alt="portfolio img01" class="shadow"></a>
+            <h2>portfolio no.8</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
            </div>
-         </div>         
+         </div>
        </div>
      </section>
-     <section id="myskill">MySkill</section>
-     <section id="ourclients">OurClients</section>
-     <section id="mytool">MyTool</section>
-     <section id="project">Project</section>
+     <section id="myskill">
+       <div class="row">
+         <h2>My Skill</h2>
+         <div class="column">
+           <!-- progress bar -->
+           <div class="inner none_type progressbar">
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+             <div class="items_wrap">
+               <div class="items">
+                 <div class="title">Html5</div>
+                 <div class="percent">50%</div>
+               </div>
+             </div>
+             <div class="items_wrap">
+               <div class="items">
+                 <div class="title">CSS3</div>
+                 <div class="percent">70%</div>
+               </div>
+             </div>
+             <div class="items_wrap">
+               <div class="items">
+                 <div class="title">javascript</div>
+                 <div class="percent">80%</div>
+               </div>
+             </div>
+             <div class="items_wrap">
+               <div class="items">
+                 <div class="title">jquery</div>
+                 <div class="percent">60%</div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </section>
+     <section id="ourclients">
+       <div class="row">
+         <h2>Our clients</h2>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-1.png" alt="client-1">
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-2.png" alt="client-2">
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-3.png" alt="client-3">
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-4.png" alt="client-4">
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-5.png" alt="client-5">
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-6.png" alt="client-6">
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-7.png" alt="client-7">
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+             <img src="img/clients/client-8.png" alt="client-8">
+           </div>
+         </div>
+
+       </div>
+     </section>
+     <section id="mytool">
+       <div class="row">
+         <h2>My Tool</h2>
+         <div class="column">
+           <div class="inner none_type">
+            <a href="#"><img src="img/mytool/img01.png" alt="portfolio img01"></a>
+            <h2>html5</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+            <a href="#"><img src="img/mytool/img02.png" alt="portfolio img01" ></a>
+            <h2>css3</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+            <a href="#"><img src="img/mytool/img03.png" alt="mytool img01" ></a>
+            <h2>javascript</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner none_type">
+            <a href="#"><img src="img/mytool/img04.png" alt="mytool img01"></a>
+            <h2>sass/ css proprocessor</h2>
+            <p>
+              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
+              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            </p>
+           </div>
+         </div>
+
+       </div>
+     </section>
+     <section id="project">
+       <div class="row">
+         <h2>Project</h2>
+         <div class="column">
+           <div class="inner">
+             <a href="#"><img src="img/about/about-mission.jpg" alt="about img01"></a>
+             <h2>project no.1</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner">
+             <a href="#"><img src="img/about/about-plan.jpg" alt="about img01"></a>
+             <h2>project no.2</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner">
+             <a href="#"><img src="img/about/about-vision.jpg" alt="about img01"></a>
+             <h2>project no.3</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+           </div>
+         </div>
+         <div class="column">
+           <div class="inner">
+             <a href="#"><img src="img/about/about-vision.jpg" alt="about img01"></a>
+             <h2>project no.4</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+           </div>
+         </div>
+       </div>
+     </section>
    </main>
    <footer id="footer">
-     footer
+     <div class="footer_top">
+       <!-- footer 상단영역 -->
+       <div class="container">
+         <div class="row">
+           <!-- footer logo -->
+           <h3>Logo</h3>
+           <div class="column footer_logo">
+             <!-- site map -->
+             <h4>site map</h4>
+             <ul>
+               <li><a href="#intro">Home</a></li>
+               <li><a href="#myprofile">My profile</a></li>
+               <li><a href="#portfolio">portfolio</a></li>
+               <li><a href="#myskill">myskill</a></li>
+               <li><a href="#ourcliencts"></a></li>
+               <li><a href="#mytool">mytool</a></li>
+               <li><a href="#project">project</a></li>
+             </ul>
+           </div>
+           <div class="column ">
+             <!-- contac tus -->
+             <h4>contac us</h4>
+             <p>
+               A108 Adam street<br>
+               New york, NY 535022<br>4
+             <h4>news</h4>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
+           <form action="">
+              <input type="search" name="search"><input type="submit" value="search">
+           </form>
+           </div>
+         </div>
+       </div>
+       <div class="copyright">
+         ⓒcopyright <strong>mypage</strong> .All Rights Reserved
+       </div>
+       <div class="credits">
+
+       </div>
+     </div>
+     <div class="container">
+       <!-- footer 하단영역 -->
+     </div>
    </footer>
  </body>
  </html>
