풋터 확인용
ㅇㅇ

--- a/index.html
+++ b/index.html
@@ -305,47 +305,56 @@
    </main>
    <footer id="footer">
      <div class="footer_top">
-       <!-- footer 상단영역 -->
+       <!-- footer 상단 영역 -->
        <div class="container">
          <div class="row">
-           <!-- footer logo -->
-           <h3>Logo</h3>
            <div class="column footer_logo">
+             <!-- footer logo -->
+             <h3>Logo</h3>
+           </div>
+           <div class="column">
              <!-- site map -->
              <h4>site map</h4>
              <ul>
                <li><a href="#intro">Home</a></li>
-               <li><a href="#myprofile">My profile</a></li>
-               <li><a href="#portfolio">portfolio</a></li>
-               <li><a href="#myskill">myskill</a></li>
-               <li><a href="#ourcliencts"></a></li>
-               <li><a href="#mytool">mytool</a></li>
-               <li><a href="#project">project</a></li>
+               <li><a href="#myprofile">My Profile</a></li>
+               <li><a href="#portfolio">Portfolio</a></li>
+               <li><a href="#myskill">My Skill</a></li>
+               <li><a href="#ourclients">Our Clients</a></li>
+               <li><a href="#mytool">My tool</a></li>
+               <li><a href="#project">Project</a></li>
              </ul>
            </div>
-           <div class="column ">
-             <!-- contac tus -->
-             <h4>contac us</h4>
+           <div class="column">
+             <!-- contact us -->
+             <h4>contact us</h4>
              <p>
-               A108 Adam street<br>
-               New york, NY 535022<br>4
+               A108 Adam street <br>
+               New York, NY 535022 <br>
+               United states <br>
+               <strong>phone&nbsp;:</strong><a href="tel:+82-010-0000-0000"></a><br>
+               <strong>Email&nbsp;:</strong><a href="mailto:mymail@naver.com"></a><br>
+             </p>
+           </div>
+           <div class="column news">
+             <!-- news -->
              <h4>news</h4>
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
-           <form action="">
-              <input type="search" name="search"><input type="submit" value="search">
-           </form>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+             <form action="">
+               <input type="search" name="search"><input type="submit" value="search">
+             </form>
            </div>
          </div>
        </div>
+     </div>
+     <div class="container">
+       <!-- footer 하단 영역 -->
        <div class="copyright">
          ⓒcopyright <strong>mypage</strong> .All Rights Reserved
        </div>
        <div class="credits">
-
+         Designed By <a href="mailto:aaa@naver.com">Myself</a>
        </div>
-     </div>
-     <div class="container">
-       <!-- footer 하단영역 -->
      </div>
    </footer>
  </body>
