--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="24px" height="24px"><path d="M0 0h24v24H0z" fill="none"/><path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/></svg>
      </a>
    </div>
+   <input type="checkbox" id="gnbcheck" name="gnbcheck">
+   <label for="gnbcheck" id="gnbbtn">
+     <span>line1</span>
+     <span>line2</span>
+     <span>line3</span>
+   </label>
    <header id="header">
      <h1 id="top_logo"><a href="#">logo</a></h1>
      <nav id="gnb">
+       <label for="gnbcheck" id="mobile_close_btn">
+         <span>line</span>
+       </label>
        <ul>
          <li><a href="#intro">Home</a></li>
          <li><a href="#myprofile">MyProfile</a></li>
@@ -301,8 +310,7 @@
            </div>
          </div>
        </div>
-     </section>
-   </main>
+     </section></main>
    <footer id="footer">
      <div class="footer_top">
        <!-- footer 상단 영역 -->
@@ -332,8 +340,8 @@
                A108 Adam street <br>
                New York, NY 535022 <br>
                United states <br>
-               <strong>phone&nbsp;:</strong><a href="tel:+82-010-0000-0000"></a><br>
-               <strong>Email&nbsp;:</strong><a href="mailto:mymail@naver.com"></a><br>
+               <strong>phone&nbsp;:</strong><a href="tel:+82-010-0000-0000">+82-010-0000-0000</a><br>
+               <strong>Email&nbsp;:</strong><a href="mailto:mymail@naver.com">&nbsp;mymail@naver.com</a><br>
              </p>
            </div>
            <div class="column news">
