--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="24px" height="24px"><path d="M0 0h24v24H0z" fill="none"/><path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/></svg>
      </a>
    </div>
+   <!--mobile menu button-->
    <input type="checkbox" id="gnbcheck" name="gnbcheck">
    <label for="gnbcheck" id="gnbbtn">
-     <span>line1</span>
-     <span>line2</span>
-     <span>line3</span>
+     <span></span>
+     <span></span>
+     <span></span>
    </label>
    <header id="header">
      <h1 id="top_logo"><a href="#">logo</a></h1>
      <nav id="gnb">
-       <label for="gnbcheck" id="mobile_close_btn">
-         <span>line</span>
-       </label>
+       <label for="gnbcheck" id="mobile_close_btn"></label>
        <ul>
          <li><a href="#intro">Home</a></li>
          <li><a href="#myprofile">MyProfile</a></li>
@@ -167,18 +166,18 @@
              <div class="items_wrap">
                <div class="items">
                  <div class="title">CSS3</div>
-                 <div class="percent">70%</div>
-               </div>
-             </div>
-             <div class="items_wrap">
-               <div class="items">
-                 <div class="title">javascript</div>
                  <div class="percent">80%</div>
                </div>
              </div>
              <div class="items_wrap">
                <div class="items">
-                 <div class="title">jquery</div>
+                 <div class="title">javascript</div>
+                 <div class="percent">70%</div>
+               </div>
+             </div>
+             <div class="items_wrap">
+               <div class="items">
+                 <div class="title">CSS3</div>
                  <div class="percent">60%</div>
                </div>
              </div>
@@ -188,48 +187,47 @@
      </section>
      <section id="ourclients">
        <div class="row">
-         <h2>Our clients</h2>
+         <h2>Our Clients</h2>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-1.png" alt="client-1">
+              <img src="img/clients/client-1.png" alt="client-1">
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-2.png" alt="client-2">
+              <img src="img/clients/client-2.png" alt="client-2">
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-3.png" alt="client-3">
+              <img src="img/clients/client-3.png" alt="client-3">
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-4.png" alt="client-4">
+              <img src="img/clients/client-4.png" alt="client-4">
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-5.png" alt="client-5">
+              <img src="img/clients/client-5.png" alt="client-5">
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-6.png" alt="client-6">
+              <img src="img/clients/client-6.png" alt="client-6">
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-7.png" alt="client-7">
+              <img src="img/clients/client-7.png" alt="client-7">
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-             <img src="img/clients/client-8.png" alt="client-8">
+              <img src="img/clients/client-8.png" alt="client-8">
            </div>
          </div>
-
        </div>
      </section>
      <section id="mytool">
@@ -237,80 +235,68 @@
          <h2>My Tool</h2>
          <div class="column">
            <div class="inner none_type">
-            <a href="#"><img src="img/mytool/img01.png" alt="portfolio img01"></a>
-            <h2>html5</h2>
-            <p>
-              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
-              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-            </p>
+             <img src="img/mytool/img01.png" alt="mytool img01">
+             <h3>html5</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-            <a href="#"><img src="img/mytool/img02.png" alt="portfolio img01" ></a>
-            <h2>css3</h2>
-            <p>
-              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
-              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-            </p>
+             <img src="img/mytool/img02.png" alt="mytool img02">
+             <h3>CSS3</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-            <a href="#"><img src="img/mytool/img03.png" alt="mytool img01" ></a>
-            <h2>javascript</h2>
-            <p>
-              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
-              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-            </p>
+             <img src="img/mytool/img03.png" alt="mytool img03">
+             <h3>Javascript</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
          <div class="column">
            <div class="inner none_type">
-            <a href="#"><img src="img/mytool/img04.png" alt="mytool img01"></a>
-            <h2>sass/ css proprocessor</h2>
-            <p>
-              <strong>Participation&nbsp;:</strong>&nbsp;50%<br>
-              <strong>Description&nbsp;:</strong>&nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-            </p>
+             <img src="img/mytool/img04.png" alt="mytool img04">
+             <h3>SASS/CSS Preprocessor</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
-
        </div>
      </section>
      <section id="project">
        <div class="row">
-         <h2>Project</h2>
+         <h2>project</h2>
          <div class="column">
            <div class="inner">
-             <a href="#"><img src="img/about/about-mission.jpg" alt="about img01"></a>
-             <h2>project no.1</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+              <img src="img/about/about-mission.jpg" alt="img01">
+              <h3>project no.1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
          <div class="column">
            <div class="inner">
-             <a href="#"><img src="img/about/about-plan.jpg" alt="about img01"></a>
-             <h2>project no.2</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+              <img src="img/about/about-plan.jpg" alt="img02">
+              <h3>project no.1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
          <div class="column">
            <div class="inner">
-             <a href="#"><img src="img/about/about-vision.jpg" alt="about img01"></a>
-             <h2>project no.3</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+              <img src="img/about/about-vision.jpg" alt="img03">
+              <h3>project no.1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
          <div class="column">
            <div class="inner">
-             <a href="#"><img src="img/about/about-vision.jpg" alt="about img01"></a>
-             <h2>project no.4</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,r sit amet, consectetur adipisicing elir sit amet, consectetur adipisicing eli</p>
+              <img src="img/about/about-mission.jpg" alt="img04">
+              <h3>project no.1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
            </div>
          </div>
        </div>
-     </section></main>
+     </section>
+   </main>
    <footer id="footer">
      <div class="footer_top">
        <!-- footer 상단 영역 -->
@@ -341,7 +327,7 @@
                New York, NY 535022 <br>
                United states <br>
                <strong>phone&nbsp;:</strong><a href="tel:+82-010-0000-0000">+82-010-0000-0000</a><br>
-               <strong>Email&nbsp;:</strong><a href="mailto:mymail@naver.com">&nbsp;mymail@naver.com</a><br>
+               <strong>Email&nbsp;:</strong><a href="mailto:mymail@naver.com">mymail@naver.com</a><br>
              </p>
            </div>
            <div class="column news">
